# yellow-legged-alert

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
scripts/notebooks/: split_background_audio.ipynb
src/: sound.py  xenocanto.py
tests/: test_sound.py  test_xenocanto.py
tests/data/xenocanto/: recordings_existent.json
yellow_legged_alert/: sound.py  xenocanto.py
