[tool.poetry]
name = "yellow-legged-alert"
version = "0.1.0"
description = "project to collect and detect sounds of seagulls in my terrace"
authors = ["Antonio Rodrigues <adamiaonr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yellow_legged_alert"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
numpy = "1.23.5"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
tensorflow = "2.12.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
librosa = "^0.10.0.post2"
soundfile = "^0.12.1"
noisereduce = "^2.0.1"
wget = "^3.2"
requests = "^2.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
